processor/src/test/resources/validationExamples/bad/graph is not an interface.java
// This file is compiled only in test.
package x;

import com.inrupt.rdf.wrapping.annotation.Graph;

@Graph
class X {
}
